--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV</title>
+  <title>Personal Portfolio</title>
+  <link rel="icon" href="images/cv.webp" type="image/webp">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="main.scss">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="spinner"></div>
-
+  <div id="header">
+     <div class="container">
+      <nav>
+        <img src="" class="logo">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Portfolio</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+     </div>
+  </div>  
+  <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
