header is designed

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <nav>
         <img src="" class="logo">
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
-          <li>Portfolio</li>
-          <li>Contact</li>
+          <li><a>Home</a></li>
+          <li><a>About</a>></li>
+          <li><a>Services</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Contact</a></li>
         </ul>
       </nav>
      </div>
