header is designed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           <li><a>Contact</a></li>
         </ul>
       </nav>
+      <div class="header-text">
+        <p>Frontend developer</p>
+        <h1>Hi I'm <span> Alisher</span><br> from UZBEKISTAN</h1>
+      </div>
      </div>
   </div>  
   <script src="app.js"></script>
