--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="header">
      <div class="container">
       <nav>
-        <img src="" class="logo">
+        <img src="images/logo.jpg" class="logo">
         <ul>
           <li><a>Home</a></li>
           <li><a>About</a>></li>
@@ -27,6 +27,16 @@
       </div>
      </div>
   </div>  
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="#" alt="">
+        </div>
+        <div class="about-col-2"></div>
+      </div>
+    </div>
+  </div>
   <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
