--- a/index.html
+++ b/index.html
@@ -27,13 +27,36 @@
       </div>
      </div>
   </div>  
+<!-- ----------about------------- -->
   <div id="about">
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="#" alt="">
+          <img src="images/about.jpg" width=" 500px" alt="">
         </div>
-        <div class="about-col-2"></div>
+        <div class="about-col-2">
+          <h1 class="sub-title">About Me</h1>
+          <p> Qaysi ko‘nikma orzungizdagi hayotga olib borishini bilasizmi?
+
+              Bu o‘rgana olish ko‘nikmasi. Har qanday vaziyatda ham, sun'iy 
+              intellektlar kuchayib borganda ham, dunyo o‘zgarganda ham orzularingizga
+               erishishni osonlashtiradigan yo‘l — bu o‘rgana olish ko‘nikmasi. Bu ko‘nikma 
+               
+               bilan tillar, kasblar va boshqa muhim ko‘nikmalarni o‘rgana olasiz. Oxir-oqibat orzu-maqsadlaringizga erishasiz. 
+          </p>
+          <div class="tab-titles">
+              <p class="tab-links active-link">Skills</p>
+              <p class="tab-links">Experience</p>
+              <p class="tab-links">Education</p>
+          </div>
+          <div class="tab-contents">
+            <ul>
+              <li><span>UI/UX</span><br>Designing Web/APP interface</li>
+              <li><span>Web development</span><br>Web app development</li>
+              <li><span>App development</span><br>Building Android/iOS apps</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
