--- a/index.html
+++ b/index.html
@@ -45,15 +45,29 @@
                bilan tillar, kasblar va boshqa muhim ko‘nikmalarni o‘rgana olasiz. Oxir-oqibat orzu-maqsadlaringizga erishasiz. 
           </p>
           <div class="tab-titles">
-              <p class="tab-links active-link">Skills</p>
-              <p class="tab-links">Experience</p>
-              <p class="tab-links">Education</p>
+              <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+              <p class="tab-links" onclick="opentab('experience')">Experience</p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
           </div>
-          <div class="tab-contents">
+          <div class="tab-contents active-tab" id="skills">
             <ul>
               <li><span>UI/UX</span><br>Designing Web/APP interface</li>
               <li><span>Web development</span><br>Web app development</li>
               <li><span>App development</span><br>Building Android/iOS apps</li>
+            </ul>
+          </div>
+          <div class="tab-contents" id="experience">
+            <ul>
+              <li><span>2021-Current</span><br>Designing Web/APP interface</li>
+              <li><span>2019-2021</span><br>Web app development</li>
+              <li><span>2017-2019</span><br>Building Android/iOS apps</li>
+            </ul>
+          </div>
+          <div class="tab-contents" id="education">
+            <ul>
+              <li><span>2016</span><br>Designing Web/APP interface</li>
+              <li><span>2016</span><br>Web app development</li>
+              <li><span>2014</span><br>At EKA University of Applied Science</li>
             </ul>
           </div>
         </div>
