--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="images/cv.webp" type="image/webp">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/ea122f8d0c.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="header">
@@ -71,6 +72,33 @@
             </ul>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!----------services--------->
+  <div id="services">
+    <div class="container">
+      <h1 calss="sub-title">My Services</h1>
+      <div class="services-list">
+         <div>
+          <i class="fa-solid fa-code"></i>
+          <h2>Web Design</h2>
+          <p>lorem loremlorem lorem lorem lorem lorem lorem v lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+          <a href="#">Learn more </a>
+         </div>
+         <div>
+          <i class="fa-solid fa-crop-simple"></i>
+          <h2>UI/UX Design</h2>
+          <p>lorem loremlorem lorem lorem lorem lorem lorem v lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+          <a href="#">Learn more </a>
+         </div>
+         <div>
+          <i class="fa-brands fa-app-store-ios"></i>
+          <h2>App Design</h2>
+          <p>lorem loremlorem lorem lorem lorem lorem lorem v lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+          <a href="#">Learn more </a>
+         </div>
       </div>
     </div>
   </div>
