--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div class="header-text">
-        <p>Frontend developer</p>
+        <p>Full Stack Developer</p>
         <h1>Hi I'm <span> Alisher</span><br> from UZBEKISTAN</h1>
       </div>
      </div>
@@ -37,13 +37,10 @@
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
-          <p> Qaysi ko‘nikma orzungizdagi hayotga olib borishini bilasizmi?
-
-              Bu o‘rgana olish ko‘nikmasi. Har qanday vaziyatda ham, sun'iy 
-              intellektlar kuchayib borganda ham, dunyo o‘zgarganda ham orzularingizga
-               erishishni osonlashtiradigan yo‘l — bu o‘rgana olish ko‘nikmasi. Bu ko‘nikma 
-               
-               bilan tillar, kasblar va boshqa muhim ko‘nikmalarni o‘rgana olasiz. Oxir-oqibat orzu-maqsadlaringizga erishasiz. 
+          <p>I'm <b>Sobitaliev Alisher</b>, a <b>Full Stack Developer</b> from <b>UZBEKISTAN</b> 
+            currently in my second year at <b>EKA University.</b> I love building
+            smart, user-focused applications and enjoy solving complex problems 
+            with elegant code. Always learning, always improving. 
           </p>
           <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -52,23 +49,21 @@
           </div>
           <div class="tab-contents active-tab" id="skills">
             <ul>
-              <li><span>UI/UX</span><br>Designing Web/APP interface</li>
-              <li><span>Web development</span><br>Web app development</li>
+              <li><span>Frontend Development</span><br>Designing and building responsive Websites</li>
+              <li><span>Backend Development</span><br>Creating APIs, Ensure smoth data processing</li>
               <li><span>App development</span><br>Building Android/iOS apps</li>
             </ul>
           </div>
           <div class="tab-contents" id="experience">
             <ul>
-              <li><span>2021-Current</span><br>Designing Web/APP interface</li>
-              <li><span>2019-2021</span><br>Web app development</li>
-              <li><span>2017-2019</span><br>Building Android/iOS apps</li>
+              <li><span>2025-Current</span><br>Backend Development</li>
+              <li><span>2024-2025</span><br>Website development</li>
             </ul>
           </div>
           <div class="tab-contents" id="education">
             <ul>
-              <li><span>2016</span><br>Designing Web/APP interface</li>
-              <li><span>2016</span><br>Web app development</li>
-              <li><span>2014</span><br>At EKA University of Applied Science</li>
+              <li><span>2025-Current</span><br>At EKA University of Applied Science (extra cources)</li>
+              <li><span>2024</span><br>At EKA University of Applied Science</li>
             </ul>
           </div>
         </div>
@@ -89,7 +84,7 @@
          </div>
          <div>
           <i class="fa-solid fa-crop-simple"></i>
-          <h2>UI/UX Design</h2>
+          <h2>Backend</h2>
           <p>lorem loremlorem lorem lorem lorem lorem lorem v lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
           <a href="#">Learn more </a>
          </div>
