--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
       </div>
     </div>
   </div>
+  <!----------portfolio------------->
+  <div id="portfolio">
+    <div class="container">
+      <h1 class="sub-title">My Works</h1>
+      <div class="work-list">
+        <div class="work">
+          <a target="_blank" href="http://tic-tac-toe-decider.netlify.app"><img src="images/work1.webp" alt="picture tic-tac-toe"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
