--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img src="images/about.jpg" width=" 500px" alt="">
         </div>
         <div class="about-col-2">
-          <h1 class="sub-title">About Me</h1>
+          <h1 class="sub-title" id="about_me">About Me</h1>
           <p>I'm <b>Sobitaliev Alisher</b>, a <b>Full Stack Developer</b> from <b>UZBEKISTAN</b> 
             currently in my second year at <b>EKA University.</b> I love building
             smart, user-focused applications and enjoy solving complex problems 
@@ -109,6 +109,12 @@
     </div>
   </div>
   
+
+
+  <!-- -----------navbar--------- -->
+   <nav>
+    <a href="#about_me">About Me</a>
+   </nav>
   <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
