--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
 
 
   <!-- -----------navbar--------- -->
-   <nav>
+   <nav class="bookmarks">
     <a href="#about_me">About Me</a>
+    <a href="#services">My Services</a>
+    <a href="#portfolio">My Works</a>
    </nav>
   <script src="app.js"></script>
   <script src="main.js"></script>
