added contact and social media accounts

--- a/index.html
+++ b/index.html
@@ -110,13 +110,52 @@
   </div>
   
 
+  <!-- ---------------contact------------------ -->
+
+ 
 
   <!-- -----------navbar--------- -->
-   <nav class="bookmarks">
-    <a href="#about_me">About Me</a>
-    <a href="#services">My Services</a>
-    <a href="#portfolio">My Works</a>
-   </nav>
+   <div class="footer">
+      <nav class="bookmarks">
+        <a href="#about_me">About Me</a>
+        <a href="#services">My Services</a>
+        <a href="#portfolio">My Works</a>
+      </nav>
+   </div>
+
+  <div id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="contact-left">
+         <div class="sub-title">Contact Me</div>
+         <p><i class="fa-solid fa-square-envelope"></i> alisher20021212@gmail.com</p>
+         <p><i class="fa-solid fa-square-phone"></i> +371 22 471 754</p>
+        
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+          </div>
+          <a href="#" class="cv-btn" download>Download CV</a>
+        </div>
+        <div class="contact-right"> 
+          <form>
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+            <button type="submit" class="cv-btn submit-btn">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright Alisher. Made by Alisher</p>
+    </div>
+  </div>
+   
   <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
