Revert "Adjusted for small screens and enabled form section"
This reverts commit 02fd1e305483d448f8a36de4c4d1c0fbe15104f3.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
      <div class="container">
       <nav>
         <img src="images/logo.jpg" class="logo">
-        <ul id="sidemenu">
-          <li><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <i class="fas fa-times" onclick="closeMenu()"></i>
+        <ul>
+          <li><a>Home</a></li>
+          <li><a>About</a>></li>
+          <li><a>Services</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Contact</a></li>
         </ul>
-        <i class="fas fa-bars" onclick="openMenu()"></i>
       </nav>
       <div class="header-text">
         <p>Full Stack Developer</p>
@@ -144,13 +142,12 @@
           <a href="#" class="cv-btn" download>Download CV</a>
         </div>
         <div class="contact-right"> 
-          <form name="submit-to-google-sheet">
+          <form>
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" rows="6" placeholder="Your Message"></textarea>
             <button type="submit" class="cv-btn submit-btn">Submit</button>
           </form>
-          <span id="form-message"></span>
         </div>
       </div>
     </div>
@@ -158,6 +155,7 @@
       <p>Copyright Alisher. Made by Alisher</p>
     </div>
   </div>
+   
   <script src="app.js"></script>
   <script src="main.js"></script>
 </body>
