--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </nav>
       <div class="header-text">
         <p>Full Stack Developer</p>
-        <h1>Hi I'm <span> Alisher</span><br> from UZBEKISTAN</h1>
+        <h1>Hi I'm <span> Alisher</span><br> from <span class="uzb">UZBEKISTAN</span></h1>
       </div>
      </div>
   </div>  
