social icons are activated

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
          <p><i class="fa-solid fa-square-phone"></i> +371 22 471 754</p>
         
           <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100089094789769" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://x.com/Alishersila?t=ID37m-JOrWCZk8AQBkvlKA&s=09" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/alisher_12_12_2002?igsh=MWc5d2NpeDFuc3NwdA==" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alisher7172" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://t.me/Alisher_2002_12_12" target="_blank"><i class="fa-brands fa-telegram"></i></a>
           </div>
           <a href="#" class="cv-btn" download>Download CV</a>
         </div>
