changes for text

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
       <div class="services-list">
          <div>
           <i class="fa-solid fa-code"></i>
-          <h2>Web Design</h2>
-          <p>lorem loremlorem lorem lorem lorem lorem lorem v lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+          <h2>Web Dvelopment</h2>
+          <p>I am developing Websites using HTML, CSS , JavaScript, and React.  My goal is to build fast , accessib, and scalable web solutions that meet real-world needs.
+
+          </p>
           <a href="#">Learn more </a>
          </div>
          <div>
